[package]
name = "braid_event_stream"
version = "0.1.0"
edition = "2021"
authors = ["Elhanan Buchsbaum <elhananby@gmail.com>"]

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
eventsource-stream = "0.2"
